# archimedes-nitrides

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  archimedes.tex  dblfont.sty  fdl.tex
doc/diode_pictures/: dens.eps  efield.eps  energy.eps  potential.eps  vel.eps
doc/mesfet_pictures/: MCenergy.ps  MCpotential.ps  MEPenergy.ps  MEPpotential.ps  density.ps  energy.ps  potential.ps  x_velocity.ps  y_velocity.ps
examples/: README
examples/AlP_BULK/: bulk.input
examples/AlSb_BULK/: bulk.input
examples/DIODE/: README  diode.input
examples/DIODE_Ballistic/: diode_MC_ballistic.input
examples/DIODE_Quantum_effective_potential/: diode_full_potential.input
examples/GaN_TCAD/: tcad.csv  tcad.input  tcad.tsv
examples/GaN_bulk/: bulk.input
examples/GeMESFET/: mesfet.input
examples/InP_BULK/: bulk.input
examples/InSb_BULK/: bulk.input
examples/MESFET/: mesfet.input
examples/MOSFET/: mosfet.input
examples/SiGeHeterostructure/: diode.input
examples/Si_BULK/: bulk.input
examples/constant_B/: constant_B.input
examples/mep_MC/: density_start.xyz  energy_start.xyz  mesfet.input
examples/mep_diode/: diode.input
rappture_GUI/: README  tool.xml
rappture_GUI/wrapper/: Makefile  archimedes-wrapper.c
src/: AlAs.h  AlP.h  GaAs.h  GaSb.h  HMEPbcs.h  Hole_bcs.h  InP.h  InSb.h  MEP_interpolation.h  Makefile.am  Makefile.in  ParabMEP2D.h  archimedes.c  charge.h  computecurrents.h  configuration.h  constants.h  deviceconfig.h  diode_density_gradient_potential.input  drift.h  electric_field.h  electron_relaxation.h  electrostatics.c  electrostatics.h  emc_threaded.h  ensemblemontecarlo.h  faraday.h  faradaybcs.h  global_defines.h  hole_relaxation.h  holemep2d.h  material.c  material.h  material_parameters.h  mcparameters.h  media.h  mesh.c  mesh.h  mesher.h  mm2.h  (+23 more)
src/materials/: AlSb.h  GaN.h  GaP.h  Germanium.h  InAs.h  Silicon.h
src/mep/: HMEPbcs.h  Hole_bcs.h  ParabMEP2D.h  constants.h  electron_bcs.h  electron_mep.h  electron_relaxation.h  extrema.h  hole_bcs.h  hole_mep.h  hole_relaxation.h  holemep2d.h  mep.h  mep_interpolation.h  mm.h  sign.h
tests/AlAs_BULK/: bulk.input
tests/AlInSb_test/: bulk.input
tests/DIODE_Full_Band/: diode_full_band.input
tests/DIODE_Kane_Band/: diode_kane_band.input
tests/DIODE_Parabolic_Band/: diode_parabolic_band.input
tests/DIODE_Quantum_effective_potential/: diode_bohm_potential.input  diode_calibrated_bohm_potential.input
tests/DIODE_Save_Mesh/: diode_save_mesh.input
tests/GaAsMESFET/: mesfet.input
tests/GaN_bulk/: bulk.input
tests/GaP_BULK/: bulk.input
tests/GaSb_BULK/: bulk.input
tests/InAs_BULK/: bulk.input
tests/faraday/: faraday.input
tests/mep_MC/: potential_start.xyz
tests/mep_mesfet/: mesfet.input
