bin_PROGRAMS = archimedes
archimedes_SOURCES = \
	materials/AlAs.h \
	materials/AlP.h \
	materials/AlSb.h \
	materials/GaAs.h \
	materials/GaN.h \
	materials/GaP.h \
	materials/GaSb.h \
	materials/Germanium.h \
	materials/InAs.h \
	materials/InP.h \
	materials/InSb.h \
	materials/Silicon.h \
	archimedes.c \
	charge.h \
	computecurrents.h \
	constants.h \
	deviceconfig.h \
	diode_density_gradient_potential.input \
	drift.h \
	electric_field.h \
	electron_relaxation.h \
	ensemblemontecarlo.h \
	extrema.h \
	faradaybcs.h \
	faraday.h \
	HMEPbcs.h \
	Hole_bcs.h \
	holemep2d.h \
	hole_relaxation.h \
	mcparameters.h \
	media.h \
	mesher.h \
	MEP_interpolation.h \
	mm2.h \
	mm.h \
	ParabMEP2D.h \
	particle.h \
	particlecreation.h \
	poissonbcs.h \
	quantumeffectivepotential.h \
	random.h \
	readinputfile.h \
	saveoutput2dgnuplot.h \
	saveoutput2dholegnuplot.h \
	saveoutput2dholemeshformat.h \
	saveoutput2dmeshformat.h \
	saveoutputfiles.h \
	scattering.h \
	sign.h \
	thpool.h \
	thpool.c \
	updating.h \
	utility.h

archimedes_LDADD = -lm
archimedes_LDFLAGS = -pthread
